19.08.2024 | Main app process starter implemented.